Add header, footer and burger menu

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -17,6 +17,6 @@
         </div>
       </div>
     </nav>
-    <p class="footer-text">All rights reserved blogfu.space | 2025</p>
+    <p class="footer-text">All rights reserved blogxu.online | 2025</p>
   </div>
 </footer>
