--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -10,26 +10,28 @@
         <a class="context-list-link" href="./index.html#home">Home</a>
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#description"
-          >Game Description</a
+        <a class="context-list-link" href="./index.html#about"
+          >About the Game</a
         >
-      </li>
-      <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#play">Easy to Play</a>
-      </li>
-      <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#choose"
-          >Why Choose Match Mania 3D?</a
-        >
-      </li>
-      <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#boosters">Boosters</a>
       </li>
       <li class="context-list-item">
         <a class="context-list-link" href="./index.html#gallery">Gallery</a>
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#reviews">Reviews</a>
+        <a class="context-list-link" href="./index.html#play">How to Play</a>
+      </li>
+      <li class="context-list-item">
+        <a class="context-list-link" href="./index.html#skills"
+          >Skills and Power-ups</a
+        >
+      </li>
+      <li class="context-list-item">
+        <a class="context-list-link" href="./index.html#features"
+          >Game Features</a
+        >
+      </li>
+      <li class="context-list-item">
+        <a class="context-list-link" href="./index.html#faq">FAQ</a>
       </li>
     </ul>
   </nav>
