--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,26 +28,26 @@
           <a class="nav-list-link" href="./index.html#home">Home</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#description"
-            >Game Description</a
-          >
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#play">Easy to Play</a>
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#choose"
-            >Why Choose Match Mania 3D?</a
-          >
-        </li>
-        <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#boosters">Boosters</a>
+          <a class="nav-list-link" href="./index.html#about">About the Game</a>
         </li>
         <li class="nav-list-item">
           <a class="nav-list-link" href="./index.html#gallery">Gallery</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#reviews">Reviews</a>
+          <a class="nav-list-link" href="./index.html#play">How to Play</a>
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./index.html#skills"
+            >Skills and Power-ups</a
+          >
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./index.html#features"
+            >Game Features</a
+          >
+        </li>
+        <li class="nav-list-item">
+          <a class="nav-list-link" href="./index.html#faq">FAQ</a>
         </li>
       </ul>
       <button class="nav-btn" type="button" aria-label="Open mobile menu">
