--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,8 +1,7 @@
 .context-menu {
   box-shadow: -6px 8px 4px 0 rgba(16, 0, 78, 0.25);
-  background: #c31162;
-  border-radius: 30px 0 0 30px;
-  padding: 12px 16px 16px 22px;
+  background: linear-gradient(180deg, #0f8 0%, #00c96b 100%);
+  padding: 12px 20px 16px 28px;
   max-width: 264px;
   width: 100%;
   margin: 0 auto;
@@ -48,7 +47,7 @@
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  color: #fff;
+  color: #1e1e1e;
   transition: all 0.3s ease-in-out;
 
   &:active {
