--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,50 +1,73 @@
 <section class="section hero-section" id="home">
-  <div class="container hero-container">
+  <div class="hero-wrapper">
+    <div class="container hero-container">
+      <picture>
+        <source
+          srcset="./img/hero/hero-title-desk.png"
+          media="(min-width: 1440px)"
+          width="375"
+          height="151"
+        />
+        <source
+          srcset="./img/hero/hero-title-mob.png"
+          width="251"
+          height="101"
+        />
+        <img
+          class="hero-title-img"
+          src="./img/hero/hero-title-mob.png"
+          alt="Title"
+          width="251"
+          height="101"
+        />
+      </picture>
+      <p class="hero-subtitle">Unleash the Color. Solve the Rush.</p>
+      <p class="hero-text">
+        Dive into a fast-paced puzzle adventure where color, logic, and speed
+        collide!
+      </p>
+      <div class="hero-btn-wrapper">
+        <a
+          class="hero-btn"
+          href="#features"
+          rel="noopener noreferrer"
+          title="Download the game Color Rush Mania on Google Play"
+          aria-label="Download the game Color Rush Mania on Google Play"
+        >
+          <picture>
+            <source
+              srcset="./img/hero/hero-download-desk.png"
+              media="(min-width: 1440px)"
+              width="221"
+              height="68"
+            />
+            <source
+              srcset="./img/hero/hero-download-mob.png"
+              width="171"
+              height="52"
+            />
+            <img
+              class="hero-google-play-img"
+              src="./img/hero/hero-download-mob.png"
+              alt="Google Play button"
+              width="171"
+              height="52"
+            />
+          </picture>
+        </a>
+      </div>
+    </div>
     <picture>
       <source
-        srcset="./img/hero/hero-title-desk.png"
+        srcset="./img/hero/hero-bg-desk.png"
         media="(min-width: 1440px)"
-        width="384"
-        height="273"
       />
-      <source srcset="./img/hero/hero-title-mob.png" width="219" height="156" />
+      <source srcset="./img/hero/hero-bg-mob.png" />
       <img
-        class="hero-title-img"
-        src="./img/hero/hero-title-mob.png"
-        alt="Title"
-        width="219"
-        height="156"
+        class="hero-bg-img"
+        src="./img/hero/hero-bg-mob.png"
+        alt="Color balls"
       />
     </picture>
-    <div class="hero-btn-wrapper">
-      <a
-        class="hero-btn"
-        href="#choose"
-        rel="noopener noreferrer"
-        title="Download the game Match Mania 3D on Google Play"
-        aria-label="Download the game Match Mania 3D on Google Play"
-      >
-        <picture>
-          <source
-            srcset="./img/hero/hero-google-play-desk.png"
-            media="(min-width: 1440px)"
-            width="236"
-            height="70"
-          />
-          <source
-            srcset="./img/hero/hero-google-play-mob.png"
-            width="157"
-            height="47"
-          />
-          <img
-            class="hero-google-play-img"
-            src="./img/hero/hero-google-play-mob.png"
-            alt="Google Play button"
-            width="157"
-            height="47"
-          />
-        </picture>
-      </a>
-    </div>
   </div>
 </section>
