--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -57,8 +57,23 @@ html {
   line-height: 1.5;
   text-align: center;
   color: #fff;
+  padding: 16px 20px;
+  border-radius: 50px;
+  margin-top: -40px;
+  margin-bottom: 24px;
+  max-width: max-content;
+  margin-left: auto;
+  margin-right: auto;
 
   @include media(desktop) {
     font-size: 48px;
+    margin-top: -56px;
+    margin-bottom: 40px;
   }
+}
+
+.section-bg-wrapper {
+  border: 6px solid #fff;
+  border-radius: 40px;
+  padding: 0 40px 40px 40px;
 }
