--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,7 +3,7 @@
 @import './components/header.scss';
 @import './components/menu.scss';
 @import './components/hero.scss';
-@import './components/description.scss';
+@import './components/about.scss';
 @import './components/play.scss';
 @import './components/choose.scss';
 @import './components/boosters.scss';
