--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -29,7 +29,7 @@
       <div class="hero-btn-wrapper">
         <a
           class="hero-btn"
-          href="#features"
+          href="#download"
           rel="noopener noreferrer"
           title="Download the game Color Rush Mania on Google Play"
           aria-label="Download the game Color Rush Mania on Google Play"
