--- a/src/partials/play.html
+++ b/src/partials/play.html
@@ -1,105 +1,71 @@
 <section class="section play-section" id="play">
   <div class="container play-container">
-    <div class="section-title-wrapper">
-      <picture>
-        <source
-          srcset="./img/play/play-title-desk.png"
-          media="(min-width: 1440px)"
-          width="83"
-          height="74"
-        />
-        <source srcset="./img/play/play-title-mob.png" width="54" height="48" />
-        <img
-          class="play-title-img"
-          src="./img/play/play-title-mob.png"
-          alt="Title image"
-          width="54"
-          height="48"
-          loading="lazy"
-        />
-      </picture>
-      <h2 class="section-title play-title">Easy to Play,</h2>
-      <h2 class="section-title play-title">Hard to Master</h2>
+    <div class="section-bg-wrapper play-bg-wrapper">
+      <h2 class="section-title play-title">How to Play</h2>
+      <div class="play-list-wrapper">
+        <ul class="play-list">
+          <li class="play-list-item">
+            <span class="play-item-number">1</span>
+            <p class="play-item-text">
+              Move boxes in the direction shown by the arrow.
+            </p>
+          </li>
+          <li class="play-list-item">
+            <span class="play-item-number">2</span>
+            <p class="play-item-text">
+              Match box and gate colors to pass through.
+            </p>
+          </li>
+          <li class="play-list-item">
+            <span class="play-item-number">3</span>
+            <p class="play-item-text">
+              Fill boxes with colored balls before sending them to the dock.
+            </p>
+          </li>
+        </ul>
+        <picture>
+          <source
+            srcset="./img/play/play-img-desk.png"
+            media="(min-width: 1440px)"
+            width="256"
+            height="383"
+          />
+          <source
+            srcset="./img/play/play-img-mob.png"
+            width="75"
+            height="112"
+          />
+          <img
+            class="gallery-img"
+            src="./img/play/play-img-mob.png"
+            alt="Puzzle"
+            width="75"
+            height="112"
+            loading="lazy"
+          />
+        </picture>
+        <ul class="play-list">
+          <li class="play-list-item">
+            <span class="play-item-number">4</span>
+            <p class="play-item-text">
+              Keep an eye on the Ice timer — it will shatter when it hits zero!
+            </p>
+          </li>
+          <li class="play-list-item">
+            <span class="play-item-number">5</span>
+            <p class="play-item-text">
+              Collect matching keys to unlock locked boxes.
+            </p>
+          </li>
+          <li class="play-list-item">
+            <span class="play-item-number">6</span>
+            <p class="play-item-text">
+              Use skills like “Sort” and “Rainbow Gate” to solve tricky
+              situations.
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
-    <p class="play-top-text">
-      Simple match-3 rules, but brain-twisting challenges!
-    </p>
-    <p class="play-bottom-text">
-      Fun for all ages, perfect for a quick break or a long session.
-    </p>
-    <ul class="play-list">
-      <li class="play-item">
-        <picture>
-          <source
-            srcset="./img/play/play-brain-desk.png"
-            media="(min-width: 1440px)"
-            width="84"
-            height="84"
-          />
-          <source
-            srcset="./img/play/play-brain-mob.png"
-            width="48"
-            height="48"
-          />
-          <img
-            class="play-item-img"
-            src="./img/play/play-brain-mob.png"
-            alt="Brain"
-            width="48"
-            height="48"
-            loading="lazy"
-          />
-        </picture>
-        <p class="play-item-text">Brain Training</p>
-      </li>
-      <li class="play-item">
-        <picture>
-          <source
-            srcset="./img/play/play-light-bulb-desk.png"
-            media="(min-width: 1440px)"
-            width="84"
-            height="84"
-          />
-          <source
-            srcset="./img/play/play-light-bulb-mob.png"
-            width="48"
-            height="48"
-          />
-          <img
-            class="play-item-img"
-            src="./img/play/play-light-bulb-mob.png"
-            alt="Light bulb"
-            width="48"
-            height="48"
-            loading="lazy"
-          />
-        </picture>
-        <p class="play-item-text">Strategic Thinking</p>
-      </li>
-      <li class="play-item">
-        <picture>
-          <source
-            srcset="./img/play/play-infinity-desk.png"
-            media="(min-width: 1440px)"
-            width="84"
-            height="84"
-          />
-          <source
-            srcset="./img/play/play-infinity-mob.png"
-            width="48"
-            height="48"
-          />
-          <img
-            class="play-item-img"
-            src="./img/play/play-infinity-mob.png"
-            alt="Infinity sign"
-            width="48"
-            height="48"
-            loading="lazy"
-          />
-        </picture>
-        <p class="play-item-text">Infinite Replayability</p>
-      </li>
-    </ul>
   </div>
 </section>
