--- a/src/partials/privacy.html
+++ b/src/partials/privacy.html
@@ -1,13 +1,13 @@
 <section class="policy-section">
   <div class="container policy-container">
     <h1 class="policy-title">Privacy Policy</h1>
-    <p class="policy-text">Last Updated: 2025-07-04</p>
+    <p class="policy-text">Last Updated: 2025-06-28</p>
     <p class="policy-text">
-      This Privacy Policy applies to the blogfu.space website (hereinafter
+      This Privacy Policy applies to the blogxu.online website (hereinafter
       referred to as "Website"). By accessing or using our services, you agree
       to the collection and use of information as described in this policy.
     </p>
-    <p class="policy-subtitle">Information We Collect</p>
+    <p class="policy-subtitle">1. Information We Collect</p>
     <p class="policy-text">
       The Website may collect the following types of data:<br />
       • <span class="policy-span">Personal Information</span>: Name, email
@@ -17,20 +17,20 @@
       • <span class="policy-span">Cookies & Tracking</span>: We use cookies to
       enhance user experience and track usage trends.
     </p>
-    <p class="policy-subtitle">How We Use Your Information</p>
+    <p class="policy-subtitle">2. How We Use Your Information</p>
     <p class="policy-text">
       The data we collect may be used for:<br />
       • Providing and improving our services.<br />
       • Enhancing website security and preventing fraud.<br />
       • Analyzing trends and user behavior through analytics tools.
     </p>
-    <p class="policy-subtitle">Cookies and Tracking Technologies</p>
+    <p class="policy-subtitle">3. Cookies and Tracking Technologies</p>
     <p class="policy-text">
       We use cookies and similar technologies to personalize content, track
       website performance, and improve user experience. Users can manage or
       disable cookies through browser settings.
     </p>
-    <p class="policy-subtitle">Third-Party Services</p>
+    <p class="policy-subtitle">4. Third-Party Services</p>
     <p class="policy-text">
       We may use third-party services such as Google Analytics to monitor
       traffic and improve services. These services have their own privacy
@@ -52,26 +52,26 @@
         >Facebook</a
       >
     </p>
-    <p class="policy-subtitle">Data Security</p>
+    <p class="policy-subtitle">5. Data Security</p>
     <p class="policy-text">
       We implement security measures to protect collected information from
       unauthorized access or misuse. However, no method of transmission over the
       internet is 100% secure.
     </p>
-    <p class="policy-subtitle">Children’s Privacy</p>
+    <p class="policy-subtitle">6. Children’s Privacy</p>
     <p class="policy-text">
       Our Website is not intended for children under 13, and we do not knowingly
       collect personal data from them. If we become aware that a child has
       provided information, we will take steps to delete it.
     </p>
-    <p class="policy-subtitle">Changes to This Policy</p>
+    <p class="policy-subtitle">7. Changes to This Policy</p>
     <p class="policy-text">
       We may update this Privacy Policy periodically. Users will be notified of
       significant changes through the Website. Continued use of the Website
       after modifications implies acceptance of the updated policy.
     </p>
     <p class="policy-subtitle">
-      Your Rights under the General Data Protection Regulation (GDPR)
+      8. Your Rights under the General Data Protection Regulation (GDPR)
     </p>
     <p class="policy-text">
       Your Rights under the General Data Protection Regulation (GDPR)
@@ -100,12 +100,12 @@
       If you believe your rights have been violated, you have the right to file
       a complaint with your local data protection authority.<br />
     </p>
-    <p class="policy-subtitle">Contact Us</p>
+    <p class="policy-subtitle">9. Contact Us</p>
     <p class="policy-text">
       If you have any questions or concerns about this Privacy Policy, please
       contact us at
-      <a class="support-link" href="mailto:info@blogfu.space">
-        info@blogfu.space</a
+      <a class="support-link" href="mailto:info@blogxu.online">
+        info@blogxu.online</a
       >.
     </p>
   </div>
