--- a/src/scss/components/play.scss
+++ b/src/scss/components/play.scss
@@ -1,43 +1,34 @@
 .play-section {
-  padding-top: 32px;
+  padding-top: 58px;
   padding-bottom: 32px;
 
   @include media(desktop) {
-    padding-top: 90px;
+    padding-top: 142px;
     padding-bottom: 90px;
   }
 }
 
+.play-container {
+  position: relative;
+}
+
+.play-bg-wrapper {
+}
+
 .play-title {
+  background: #009421;
 }
 
-.play-top-text {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  text-align: center;
-  color: #000;
-  margin-bottom: 8px;
+.play-list-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 
   @include media(desktop) {
-    font-size: 24px;
-    margin-bottom: 24px;
-  }
-}
-
-.play-bottom-text {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.5;
-  text-align: center;
-  color: #000;
-  margin-bottom: 24px;
-
-  @include media(desktop) {
-    font-size: 18px;
-    margin-bottom: 36px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0;
   }
 }
 
@@ -47,31 +38,47 @@
   gap: 16px;
 
   @include media(desktop) {
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    align-items: start;
     gap: 24px;
   }
 }
 
-.play-item {
-  background: linear-gradient(180deg, #4e3cc7 0%, #299af5 100%);
-  border-radius: 10px;
-  padding: 16px 24px;
+.play-list-item {
   display: flex;
+  justify-content: center;
   align-items: center;
+  padding: 8px 16px;
   gap: 16px;
 
   @include media(desktop) {
-    width: 100%;
-    max-width: 416px;
+    padding: 12px 16px;
     gap: 24px;
-    padding: 24px;
+    max-width: 456px;
+  }
+}
+
+.play-item-number {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.5;
+  background: linear-gradient(
+    180deg,
+    rgba(153, 0, 221, 0.93) 0%,
+    #f25c39 50.48%,
+    #ff8a00 99.99%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  @include media(desktop) {
+    font-size: 64px;
   }
 }
 
 .play-item-text {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -79,5 +86,17 @@
 
   @include media(desktop) {
     font-size: 20px;
+  }
+}
+
+.gallery-img {
+  position: absolute;
+  bottom: -24px;
+  right: -20px;
+
+  @include media(desktop) {
+    position: relative;
+    bottom: auto;
+    right: auto;
   }
 }
