--- a/src/scss/components/privacy-header.scss
+++ b/src/scss/components/privacy-header.scss
@@ -13,7 +13,7 @@
 }
 
 .privacy-header-link {
-  background: #c31162;
+  background: linear-gradient(180deg, #0f8 0%, #00c96b 100%);
   border-radius: 4px;
   padding: 8px 32px 8px 24px;
   max-width: max-content;
@@ -25,5 +25,5 @@
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  color: #fff;
+  color: #1e1e1e;
 }
