--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,11 +4,12 @@
 @import './components/menu.scss';
 @import './components/hero.scss';
 @import './components/about.scss';
-@import './components/play.scss';
-@import './components/choose.scss';
-@import './components/boosters.scss';
 @import './components/gallery.scss';
-@import './components/reviews.scss';
+@import './components/play.scss';
+@import './components/skills.scss';
+@import './components/features.scss';
+@import './components/faq.scss';
+@import './components/download.scss';
 @import './components/footer.scss';
 @import './components/banner.scss';
 @import './components/privacy-header.scss';
